[gd_scene load_steps=4 format=3 uid="uid://pna4vhtfsmb1"]

[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_h0g6m"]
[ext_resource type="Texture2D" uid="uid://c2w84751bvqem" path="res://assets/imported/resources/graphics/projectiles/blue.png" id="1_jah54"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ax3ox"]
height = 150.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_h0g6m")

[node name="LaserSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_jah54")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ax3ox")

[node name="LaserLifespan" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserLifespan" to="." method="_on_laser_lifespan_timeout"]
